Apply OpenRewrite refactorings